@@ -31,7 +31,9 @@ png(filename = "Rplot\%03d.png",
 
 tiff(filename = "Rplot\%03d.tiff",
      width = 480, height = 480, units = "px", pointsize = 12,
-     compression = c("none", "rle", "lzw", "jpeg", "zip", "lzw+p", "zip+p"),
+     compression = c("none", "rle", "lzw", "jpeg", "zip",
+                     "lzw+p", "zip+p",
+                     "lerc", "lzma",  "zstd", "webp"),
      bg = "white", res = NA,  \dots,
      type = c("cairo", "Xlib", "quartz"), antialias)
 }
@@ -57,8 +59,10 @@ tiff(filename = "Rplot\%03d.tiff",
   \item{quality}{the \sQuote{quality} of the JPEG image, as a
     percentage.  Smaller values will give more compression but also more
     degradation of the image.}
-  \item{compression}{the type of compression to be used.  Ignored for
-     \code{type = "quartz"}.}
+  \item{compression}{the type of compression to be used.  Can also be a
+     numeric value supported by the underlying \code{libtiff} library :
+     see its \file{tiff.h} header file.   Ignored with a warning for
+     \code{type = "quartz"}.} 
   \item{res}{The nominal resolution in ppi which will be recorded in the
     bitmap file, if a positive integer.  Also used for \code{units}
     other than the default, and to convert points to pixels.}
@@ -153,6 +157,9 @@ tiff(filename = "Rplot\%03d.tiff",
 
 \value{
   A plot device is opened: nothing is returned to the \R interpreter.
+
+  If somthing goes wrong in writing a TIFF file (for example, an
+  unsupported type of compression), a file is produced, likely invalid.
 }
 
 \section{Warnings}{
@@ -198,6 +205,11 @@ tiff(filename = "Rplot\%03d.tiff",
   device.  The colour model used will be that set up by
   \code{X11.options} at the time the first Xlib-based devices was opened
   (or the first after all such devices have been closed).
+
+  Support for compression types depends on the underlying \samp{libtiff}
+  library: types \code{"lerc"}, \code{"lzma"}, \code{"zstd"} and
+  \code{"webp"} are relatively recent additions and may well not be
+  supported.  They are also liable to be unsupported in TIFF viewers.
 }
 
 \author{Guido Masarotto and Brian Ripley}
